# Mobile-Mixed-Reality

./: .gitignore  .gitmodules  Agenda.odt  README.md  build.gradle  createQRCode.py  example.webm.mov  networkTest.py  settings.gradle
app/: build.gradle
app/src/main/cpp/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  GameManager.cpp  GameManager.h  Mesh.cpp  Mesh.h  Messages.hpp  Network.h  Node.cpp  Node.h  Scene.cpp  Scene.h  TicTacToe.hpp  arServer.cpp  arServer.h  cameraBackground.cpp  cameraBackground.h  doxygen.config  native-lib.cpp  network.cpp  objRenderer.cpp  objRenderer.h  shader.cpp  shader.h
app/src/main/cpp/my_ar_src/: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  FourInARowScene.cpp  FourInARowScene.h  ImageTexture.cpp  ImageTexture.h  MenueScene.cpp  MenueScene.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Scene.cpp  Scene.h  TexturedQuad.cpp  TexturedQuad.h  TicTacToeScene.cpp  TicTacToeScene.h  arServer.cpp  arServer.h  cameraBackground.cpp  cameraBackground.h  native-lib.cpp  objLoader.cpp  objLoader.h  planeRenderer.cpp  planeRenderer.h  shader.cpp  shader.h
app/src/main/cpp/network_lib/: CMakeLists.txt  FourInARow.hpp  GameManager.cpp  GameManager.h  Messages.hpp  Network.h  NetworkInterface.h  TicTacToe.hpp  native-lib.cpp  network.cpp
gradle/wrapper/: gradle-wrapper.properties
mobilemixedrealityreport/: .gitignore  Makefile  abstract.tex  anleitung.tex  arcore.tex  development.tex  introduction.tex  literatur.bib  main.tex  metadaten.tex  network.tex  research.tex  summary.tex  titel.tex  user.bst  user.dbj  vorlage.gdf  vorlage.tex
(+35 files in other folders)
